--- a/app.wxss
+++ b/app.wxss
@@ -7,5 +7,5 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;*/
-  background: rgb(245, 245, 245);
+  /*background: rgb(245, 245, 245);*/
 } 
