--- a/pages/me/index.wxss
+++ b/pages/me/index.wxss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     background: red;
-    padding: 30px 0 30px 10px;
+    padding: 30px 0 30px 0px;
     /*子控件居中显示*/
     align-items: center; 
 }
@@ -13,13 +13,13 @@
 .headerView .picture{
 height: 70px;
 width: 70px;
-margin-bottom: 15px;
 border-radius:50%;
 }
 
  /*名字*/
  .headerView .name{
      color: white;
+     margin-top: 15px;
  }
 
 /*表格*/
@@ -28,7 +28,7 @@ border-radius:50%;
     flex-direction: row;
     padding: 10px ;
     background: white;
-    border-bottom: 0.5px solid lightgrey;
+    border-bottom: 0.5px solid rgb(245, 245, 245);
 }
 
 /*图标*/
