--- a/pages/course/index.wxss
+++ b/pages/course/index.wxss
@@ -3,12 +3,7 @@ text{
     color: darkgray;
     font-size: 12px;
 }
-/*容器*/
-.contain{
 
-    width: 100%;
-    height: 100%; 
-}
 
 /*1.菜单栏*/
 .memuView{
@@ -40,8 +35,6 @@ border-bottom: 1px solid rgb(245, 245, 245);
  display: flex;
  flex-direction: column;
  border-bottom: 0.5px solid rgb(245, 245, 245);
- /*border-bottom-width: 8px;*/
- /*margin: 8px;*/
  padding: 8px;
 }
 
@@ -55,40 +48,48 @@ border-bottom: 1px solid rgb(245, 245, 245);
 .item-top-left{
     width: 80px;
     height: 80px;
-    margin: 8px 0;
-
 }
 
 /*5.列表图片*/
 .item image{
-width: 80px;
-height: 80px;
+width: 100%;
+height: 100%;
 }
 
-/**/
-.item-top-right view{
-    margin-top: 5px;
-}
-
-/*7.文字背景View*/
+/*右边view*/
 .item-top-right{
     margin:5px 0 0 8px;
     flex: 1;
+    position: relative;
 }
-
 
 
 /*标题*/
 .titleText{
     display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
     font-size: 15px;
     color: black;
-     margin-top: 5px;
+
+/*强制不换行*/
+  white-space:nowrap;
+/*超出一行文字自动隐藏*/
+ overflow:hidden; 
+ /*文字隐藏后添加省略号*/
+ text-overflow:ellipsis;
+ 
 }
 
 /*学校*/
 .schoolText{
     display: inline-block;
+     position: absolute;
+    left: 0;
+    right: 100;
+    top: 25px;
 
 /*超出一行文字自动隐藏*/
  overflow:hidden; 
@@ -102,33 +103,53 @@ height: 80px;
 
 /*名字*/
 .nameText{
-float: right;
+   position: absolute;
+    right: 0;
+    top: 25px;
 }
 
 /*课酬*/
 .classText{
-  
+   position: absolute;
+    left: 0;
+    right: 100;
+    top: 46px;  
 }
 
 /*单价*/
 .priceText{
- float: right;
+ position: absolute;
+    right: 0;
+    top: 46px;
 }
 
 /*课时*/
 .timeText{
-
+    position: absolute;
+    left: 0;
+    right: 100;
+    top: 66px;   
 }
 
-/*11.小时数*/
+/*小时数*/
 .countText{
- float: right;
+position: absolute;
+    right: 0;
+    top: 66px;
 }
 
-
-
-/*13.底部部分*/
+/*下部分*/
 .item-bottom{
+    margin-top: 12px;
+    position: relative;
+}
+
+/*订单号*/
+.orderText{
+   position: absolute;
+    left: 0;
+    right: 100;
+    top: 0;  
 }
 
 /*总价格*/
@@ -137,14 +158,5 @@ float: right;
  color: burlywood;
  font-size: 14px;
 }
- .swiper{
-     
 
-    height: 50rem;
-   /*background: yellow;*/
-   /*height: 400px;*/
- }
-.swiper-item{
- 
-}
 
