--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,16 @@
-/*容器*/
-.contain{
-
-  height: 100%;
-}
 
 /*轮播控件*/
-.swpier{
+.home-swiper{
 
   width: 100%;
-  height: 200px; 
+  height: 360rpx; 
 }
 
 /**index.wxss**/
 .slide-image{
 
   width: 100%;
-  height: 200px;
+  height: 100%;
 }
 
 /*导航课程栏*/
@@ -102,81 +97,76 @@ flex-direction:column;
 /*课程图片*/
 .courseImage{
 
-  width: 100%;
-  height: 100%;
+   width: 80px;
+  height: 80px;
 }
 
 /*右边item*/
 .item-right{
+
   margin-left: 10px;
-  flex: 1; /*占满两侧空白部分*/
+   /*占满两侧空白部分*/
+  flex: 1;
+  position: relative;
 }
 
 /*标题*/
 .titleText{
+ 
+ display: block;
+ position: absolute;
+ top: 3px;
+ left: 0;
+ right: 0;
 
-/*position: absolute;
-    width:70%;
-   */
-margin-top: 2px;
-  display: block;
+ /*强制不换行*/
+  white-space:nowrap;
   /*超出一行文字自动隐藏*/
  overflow: hidden;
  /*文字隐藏后添加省略号*/
  text-overflow:ellipsis;
- /*强制不换行*/
-  white-space:nowrap;
-   /*设置固定宽度*/
-   width: 210px;
+
 }
 
 
 /*名字*/
 .nameText{
 
-display: block;
-margin-top: 17px;
+ display: block;
+ position: absolute;
+ top: 35px;
  font-size: 12px;
-   color: darkgray;
-
-}
-
-/*底部价格view*/
-.item-right-bottomView{
-  
-  margin-top: 17px;
-  /*display: flex;
-flex-direction: row;*/
-/*子项目两端对齐*/
-/*justify-content: space-between;*/
+  color: darkgray;
 }
 
 
 /*区域*/
 .areaText{
 
-  
-/*position: absolute;
-    width:70%;*/
+display: inline-block; 
+position: absolute;
+top: 63px;
+left: 0px;
+right: 90px;
 
  font-size: 12px;
-   color: darkgray;
+ color: darkgray;
   /*超出一行文字自动隐藏*/
  overflow: hidden;
  /*文字隐藏后添加省略号*/
  text-overflow:ellipsis;
  /*强制不换行*/
   white-space:nowrap;
-   /*设置固定宽度*/
-   width: 120px;
 }
 
 
 /*价格*/
 .priceText{
 
-  font-size: 13px;
-  color: burlywood;
-  float: right;
-  /*padding-right: 10px;*/
+position: absolute;
+top: 63px;
+right: 0px;
+font-size: 13px;
+color: burlywood;
+  
 }
