--- a/pages/me/index.wxss
+++ b/pages/me/index.wxss
@@ -1,16 +1,17 @@
 
 /*头部*/
 .headerView{
+ 
     display: flex;
     flex-direction: column;
-    background: red;
-    padding: 30px 0 30px 0px;
-    /*子控件居中显示*/
     align-items: center; 
+    background: red;
+    padding: 90rpx 0 ;
 }
 
 /*头像*/
 .headerView .picture{
+
 height: 70px;
 width: 70px;
 border-radius:50%;
@@ -19,7 +20,7 @@ border-radius:50%;
  /*名字*/
  .headerView .name{
      color: white;
-     margin-top: 15px;
+     margin-top: 10px;
  }
 
 /*表格*/
