--- a/pages/course/index.wxss
+++ b/pages/course/index.wxss
@@ -32,7 +32,7 @@ border-bottom: 1px solid rgb(245, 245, 245);
  }
 
 /*4.列表view*/
-.item{
+.cell{
 
  display: flex;
  flex-direction: column;
@@ -41,25 +41,25 @@ border-bottom: 1px solid rgb(245, 245, 245);
 }
 
 /*5.上部分*/
-.item-top{
+.cell-top{
     display: flex;
     flex-direction: row;
 }
 
 /*6.上部分左边*/
-.item-top-left{
+.cell-top-left{
     width: 80px;
     height: 80px;
 }
 
 /*5.列表图片*/
-.item image{
+.cell image{
 width: 100%;
 height: 100%;
 }
 
 /*右边view*/
-.item-top-right{
+.cell-top-right{
     margin:5px 0 0 8px;
     flex: 1;
     position: relative;
@@ -141,7 +141,7 @@ position: absolute;
 }
 
 /*下部分*/
-.item-bottom{
+.cell-bottom{
     margin-top: 12px;
     position: relative;
 }
@@ -162,3 +162,11 @@ position: absolute;
 }
 
 
+/*无数据图片*/
+.nodata-img{
+
+  width: 120px;
+  height: 120px;
+margin: 400rpx 0 0 240rpx;
+
+}
