--- a/pages/login/forgetPwd/index.wxml
+++ b/pages/login/forgetPwd/index.wxml
@@ -7,7 +7,7 @@
 </view>
 
 <view class="code-input-View">
-<view class="code-view" bindtap="codeAction">获取验证码</view>
+<view style="background:{{bgc}}"class="code-view" bindtap="codeAction">{{second}} {{unit}}</view>
 <input placeholder="请输入您的验证码"  type="number" maxlength="6" focus="true"  bindinput="codeInputValueChanged"/>
 </view>
 
@@ -17,7 +17,7 @@
 </view>
 
 <!--确认-->
-<button class="sureBtn" type="warn" bindtap="registAction">确认</button>
+<button class="sureBtn" type="warn" bindtap="sureAction">确认</button>
 
 </view>
 
