--- a/pages/me/personalPage/index.wxss
+++ b/pages/me/personalPage/index.wxss
@@ -1,8 +1,8 @@
 
 /*滚动区域*/
 .scrollView{
-    width: 100%;
-    height: 100%;
+    /*width: 100%;
+    height: 100%;*/
     text-align: center;
 }
 
@@ -12,11 +12,11 @@
 display: inline-block;
     width: 70px;
     height: 70px;
-    margin: 50px 0;
+    margin: 120rpx 0;
 }
 
 /*图片*/
-.scrollView .imageView image{
+.imageView image{
    width: 70px;
     height: 70px;  
     border-radius:50%;
@@ -24,7 +24,7 @@ display: inline-block;
 
 /*所有text控件*/
 .scrollView text{
-  width: 100px;
+   width: 100px;
     margin-left: 10px;
     text-align: left;
     font-size: 17px;  
@@ -55,8 +55,8 @@ text-align: right;
 }
 
 
-/*省份view*/
-.provinceView{
+/*学历view*/
+.degreeView{
         display: flex;
     flex-direction: row;
     margin-bottom: 10px;
@@ -71,12 +71,20 @@ text-align: right;
     margin-bottom: 10px;
 }
 
-.sexView checkbox-group{
+/*性别*/
+.sexView radio-group{
 
    /*让控件的宽度撑开，把两侧多余的空白部分也占满！*/
    flex:1 ;
    text-align: right; 
    margin-right: 10px;
+}
+
+/*性别文字*/
+radio-group label{
+
+    font-size: 14px;
+    color: gray;
 }
 
 /*家庭住址view*/
