--- a/pages/course/index.wxml
+++ b/pages/course/index.wxml
@@ -8,10 +8,11 @@
 
 
  <!--2.列表View-->
-<scroll-view>
+ 
+<view class="bgView">
 
  <!--列表背景View-->
- <view class="cell" wx:for="{{teachersData}}">
+ <view class="cell" wx:for="{{teachersData}}" data-index="{{index}}" bindtap="tappedCellAction">
 
  <!--item上部分-->
 <view class="cell-top">
@@ -36,14 +37,10 @@
  </view>
  </view>
 
-</scroll-view> 
+</view>
 
   </view>
 
-   <!--加载提示-->
-  <loading hidden="{{loadingHide}}">
-        加载中...
-    </loading>
 
    <!--无数据图-->
      <image wx:if="{{nodataImgShow}}" class = "nodata-img" src="../../../image/nodata.png"></image>
