--- a/pages/course/index.wxss
+++ b/pages/course/index.wxss
@@ -8,13 +8,23 @@ text{
 /*1.菜单栏*/
 .memuView{
 
+position: fixed;
+z-index: 1;
+background: white;
+/*top left right可以固定位置，下拉不被滚动*/
+top: 0;
+left: 0;
+right: 0;
+width: 100%;
 height: 50px; 
 display: flex;
 flex-direction: row;
 text-align: center;
 border-bottom: 1px solid rgb(245, 245, 245);
 }
-
+.bgView{
+    padding-top: 50px;
+}
 /*2.菜单栏按钮*/
 .titleView{
   
