--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -31,7 +31,8 @@
  
 
     <!--课程cell-->
-     <view wx:for="{{teachersData}}" class="item" >
+    <view class="cellBgView">
+     <view wx:for="{{teachersData}}" class="item"  data-index="{{index}}" bindtap="tappedCellAction">
 
 <!--图片-->
       <view  class="item-left"> 
@@ -46,9 +47,8 @@
        <text class="priceText">￥{{item.MinPrice}}/小时</text> 
     
        </view> 
-    
+    </view>
      </view>
 </view>
 
- <!--加载提示-->
-  <loading hidden="{{loadingHide}}"> 加载中...</loading>
+ 
