--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,9 +1,18 @@
 
+/*录播图，导航，推荐标题*/
+.home-swiper,.nav,.recommendCourseView{
+position: fixed;
+z-index: 1;
+background: white;
+/*top left right可以固定位置，下拉不被滚动*/
+left: 0;
+right: 0;
+}
+
 /*轮播控件*/
 .home-swiper{
-
-  width: 100%;
-  height: 360rpx; 
+top: 0;
+height: 360rpx; 
 }
 
 /**index.wxss**/
@@ -15,9 +24,8 @@
 
 /*导航课程栏*/
 .nav{
-
-  width:100%;
-  height: 70px;
+  top: 360rpx;
+  height: 150rpx;
   display: flex;
   flex-direction: row;
   background: white;
@@ -50,10 +58,8 @@ flex-direction:column;
 
 /*推荐课程*/
 .recommendCourseView{
-
-  margin-top: 10px;
-  background: white;
-  height: 40px;
+top: 510rpx; 
+height: 80rpx;
 }
 
 /*推荐课程文字*/
@@ -71,6 +77,11 @@ flex-direction:column;
   margin-left: 10px;
      line-height: 40px;
      color: lightgray;
+}
+
+/*cell背景View*/
+.cellBgView{
+  padding-top: 590rpx;
 }
 
 /*课程cell*/
