--- a/pages/index/teachers/index.wxml
+++ b/pages/index/teachers/index.wxml
@@ -11,29 +11,15 @@
       </view>
 
 <!--文字-->
-      <view class="item-right">
-
+ <view class="item-right">
 <text class="titleText">{{item.CourseTitle}}</text>
-<text class="schoolText">{{item.TeacherName}}</text>  
+<text class="nameText">{{item.TeacherName}}</text>  
+<text class="teacherAreaText">{{item.address}}</text>  
+ <text class="priceText">{{item.MinPrice}}￥/小时</text> 
+   </view> 
+ </view>
+ </view>
 
-      <view class="item-right-bottomView">
-   <text class="teacherAreaText">{{item.address}}</text>  
-      <text class="priceText">{{item.MinPrice}}￥/小时</text> 
-       </view>
-
-       </view> 
-    
-     </view>
-
-
-
-  </view>
-
-
- <!--加载提示-->
-  <loading hidden="{{loadingHide}}">
-        加载中...
-    </loading>
 
    <!--无数据图-->
      <image wx:if="{{nodataImgShow}}" class = "nodata-img" src="../../../image/nodata.png"></image>
