--- a/pages/index/teachers/index.wxss
+++ b/pages/index/teachers/index.wxss
@@ -1,7 +1,4 @@
-button{
-  background: white;
-  border-bottom: solid 0xp white;
-}
+
 /*课程cell*/
 .item{
  background: white;
@@ -29,70 +26,70 @@ button{
 
 /*右边item*/
 .item-right{
-
-/*width: 100% 跟flex: 1 原理相同，占满两侧空白部分*/   
+position: relative;
 flex: 1;
-margin: 0 0px 0 10px;
-
 }
 
 
 /*标题*/
 .titleText{
-  display: block;
 
+  position: absolute;
+  display: block;
+  top: 5px;
+   right: 0; 
+   left: 8px;
+  
 /*超出一行文字自动隐藏*/
  overflow: hidden;
  /*文字隐藏后添加省略号*/
  text-overflow:ellipsis;
  /*强制不换行*/
   white-space:nowrap;
-   /*设置固定宽度*/
-   width: 210px;
 }
 
 
-/*毕业院校*/
-.schoolText{
+/*名字*/
+.nameText{
 
-display: block;
-margin-top: 17px;
- font-size: 12px;
+  position: absolute;
+  display: block;
+  top: 36px;
+   right: 0; 
+   left: 8px;
+  font-size: 12px;
    color: darkgray;
 
 }
 
-/*右边底部view*/
-.item-right-bottomView{
-  
-  margin-top: 17px;
-display: flex;
-flex-direction: row;
-/*子项目两端对齐*/
-justify-content: space-between;
-
-}
 
 /*教学区域*/
 .teacherAreaText{
 
+position: absolute;
+  display: block;
+  top: 60px; 
+  right: 110px; 
+  left: 8px;
   font-size: 12px;
    color: darkgray;
- 
-margin-right: 8px;
+  
 /*超出一行文字自动隐藏*/
  overflow:hidden; 
  /*文字隐藏后添加省略号*/
  text-overflow:ellipsis;
  /*强制不换行*/
   white-space:nowrap;
-  /*设置固定宽度*/
-  width: 120px;
 }
 
 /*价格*/
 .priceText{
  
+ position: absolute;
+  top: 60px;
+  right: 0;
+  width: 100px;
+  text-align: right;
   font-size: 13px;
   color: burlywood;
 }
