--- a/pages/me/myCollect/index.wxss
+++ b/pages/me/myCollect/index.wxss
@@ -7,7 +7,14 @@ text{
 
 /*1.菜单栏*/
 .memuView{
-
+position: fixed;
+z-index: 1;
+background: white;
+/*top left right可以固定位置，下拉不被滚动*/
+top: 0;
+left: 0;
+right: 0;
+width: 100%;
 height: 50px; 
 display: flex;
 flex-direction: row;
@@ -30,6 +37,13 @@ border-bottom: 1px solid rgb(245, 245, 245);
      font-size: 16px;
    border-bottom: solid 1px red;
  }
+
+
+/*背景View*/
+.cellBgView{
+    padding-top: 50px;
+}
+
 
 /*4.列表view*/
 .cell{
