--- a/pages/me/mySet/sayOpinion/index.wxss
+++ b/pages/me/mySet/sayOpinion/index.wxss
@@ -1,9 +1,10 @@
 
 textarea{
-    margin: 20px 20px 0 10px;
+    width: 90%;
+    margin: 20px 20px 0 15px;
     border: solid 0.5px red;
     font-size: 14px;
-    padding-top: 8px;
+    padding: 8px 0 0 5px;
 }
 
 button{
