--- a/pages/index/teachers/teacherPage/chat/index.wxss
+++ b/pages/index/teachers/teacherPage/chat/index.wxss
@@ -1,4 +1,5 @@
 
+
 /*底部栏*/
 .footer{
 position: fixed;
@@ -50,18 +51,21 @@ border-radius: 3px;
 input{
 padding-left: 5px;
 }
-/*说话按钮*/
+/*说话view*/
 .say{ 
 line-height: 30px; 
-background: white;
+background: rgb(245, 245, 245);
 font-size: 15px;
+text-align: center;
 }
 
-/*背景view*/
-.bgView{
-   
-padding-bottom: 44px;
+
+scroll-view{
+
+    height: 450px;
+    background: gray;
 }
+
 
 /*自己的cell*/
 .selfView{
@@ -83,24 +87,38 @@ text-align: right;
     background: blue;
 }
 
-/*内容文字*/
+/*发送的文字*/
 .text{
 
-margin: 23px 50px 0 0;
+margin: 0 50px 0 0;
 padding: 13px 0;
 background: red;
  text-align: right;
 }
-
-/*发送出去的表情*/
-
+/*发送的表情*/
 .facePic{
-   /*position: absolute;
- right: 60px;
- top: 0px;*/
  margin: 0 50px 0 0;
     width: 40px;
     height: 40px; 
-background: brown;
-     
+background: brown;   
 }
+/*发送的照片*/
+.photo{
+   margin: 0 50px 0 0;
+    width: 100px;
+    height: 100px; 
+background: brown;   
+}
+/*发送的语音*/
+.voicePic{
+   margin: 0 50px 0 0;
+    width: 40px;
+    height: 40px; 
+background: brown;  
+}
+
+/*底部隐藏的toView*/
+.hideView{
+    height: 130px;
+}
+ 
